# agent-leader

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  ORCHESTRATOR.md  README.md  RELEASE_NOTES.md  ROADMAP.md  github_webhook_listener.py  orchestrator_mcp_server.py  project.yaml  pyproject.toml  tools.json
agatha-quest/: QA_GATES.md  README.md  RELEASE.md
agent_leader.egg-info/: PKG-INFO  SOURCES.txt
config/: command_bundles.yaml  comprehension-summary.schema.json  lean-mode.json  policy.balanced.json  policy.codex-manager.json  policy.prototype-fast.json  policy.shared-governance.json  policy.strict-qa.json  report.schema.json  sample.report.frontend.json
docs/: DOC_POLICY.md  alert-wording-style-guide.md  ambiguous-terms-glossary.md  autopilot-command-cookbook.md  autopilot-index.md  autopilot-test-map.md  capability-matrix.html  claim-preflight-checklist.md  cli-tui-dashboard-mockup-spec.md  codebase-comprehension-design.md  collision-postmortem-template.md  completion-inventory-100.md  core-02-04-signoff-summary.md  core-02-acceptance-packet.md  core-02-evidence-packet.md  core-02-evidence-template.md  core-02-packet-review-checklist.md  core-02-verification-checklist.md  core-03-04-cross-source-reconciliation.md  core-03-04-evidence-template.md  core-03-04-lease-verification-checklist.md  core-03-04-lease-verification.md  core-03-04-reconciliation-template.md  core-03-04-signoff-workflow.md  core-03-06-acceptance-packet-index.md  core-03-06-acceptance-packet.md  core-03-06-reviewer-checklist.md  core-03-quick-reference.md  (+158 more)
(+246 files in other folders)
